# ar4_ros_driver

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  run_in_docker.sh
annin_ar4_description/: README.md  package.xml
annin_ar4_description/config/: mk2.yaml  mk3.yaml
annin_ar4_description/meshes/ar4_gripper/: gripper_base_link.stl  gripper_jaw1_link.stl  gripper_jaw2_link.stl
annin_ar4_description/urdf/: ar.ros2_control.xacro  ar.urdf.xacro  ar_gazebo.urdf.xacro  ar_gripper.ros2_control.xacro  ar_gripper_macro.xacro  ar_macro.xacro
annin_ar4_driver/: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
annin_ar4_driver/config/: controllers.yaml  driver.yaml  gripper_driver.yaml
annin_ar4_driver/config/joint_offsets/: mk1.yaml  mk3_v6_1.yaml
annin_ar4_driver/include/annin_ar4_driver/: ar_hardware_interface.hpp  ar_servo_gripper_hw_interface.hpp  arduino_nano_driver.hpp  gripper_over_current_protection.hpp  gripper_overcurrent_protection.hpp  gripper_thermal_protection.hpp  teensy_driver.hpp
annin_ar4_driver/launch/: driver.launch.py
annin_ar4_driver/scripts/: reset_estop.sh
annin_ar4_driver/src/: ar_hardware_interface.cpp  ar_servo_gripper_hw_interface.cpp  arduino_nano_driver.cpp  gripper_over_current_protection.cpp  gripper_overcurrent_protection.cpp  gripper_thermal_protection.cpp  run_arduino_nano.cpp  teensy_driver.cpp
annin_ar4_driver/urdf/: ar.urdf.xacro
annin_ar4_firmware/AR4_nano/: AR4_nano.ino
annin_ar4_firmware/AR4_teensy/: AR4_teensy.ino
annin_ar4_gazebo/: CMakeLists.txt  package.xml
annin_ar4_gazebo/config/: controllers.yaml
annin_ar4_gazebo/launch/: gazebo.launch.py
annin_ar4_gazebo/worlds/: empty.world
annin_ar4_moveit_config/: CMakeLists.txt  package.xml
annin_ar4_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_servo.yaml  ompl_planning.yaml  pilz_planning.yaml
annin_ar4_moveit_config/launch/: demo.launch.py  moveit.launch.py
annin_ar4_moveit_config/rviz/: moveit_left.rviz  moveit_left3.rviz  moveit_with_camera.rviz
annin_ar4_moveit_config/scripts/: add_floor_collision.py
annin_ar4_moveit_config/srdf/: ar.srdf.xacro  ar_gripper_macro.srdf.xacro  ar_macro.srdf.xacro
annin_ar4_moveit_config/urdf/: fake_ar.urdf.xacro
ar3_gazebo/launch/: ar3_gazebo_bringup.launch
ar3_hardware_interface/: package.xml
ar3_hardware_interface/config/: hardware_driver.yaml
ar3_hardware_interface/launch/: ar3_hardware_bringup.launch
ar3_moveit_config/: package.xml
ar3_moveit_config/config/: joint_limits.yaml
ar3_moveit_config/launch/: planning_context.launch
ar_control/: CMakeLists.txt  README.md  package.xml
ar_control/launch/: move_group_demo.launch
ar_control/src/: move_group_demo.cpp
ar_description/: CMakeLists.txt  README.md  package.xml
ar_description/config/: ar4.yaml  ar4_mk3.yaml  initial_positions.yaml
ar_description/meshes/ar4/: link_1.stl  link_2.stl  link_3.stl  link_4.STL  link_4.stl  link_5.STL  link_5.stl  link_6.STL  link_6.stl
ar_description/meshes/ar4_gripper/: gripper_base_link.stl  gripper_jaw1_link.stl  gripper_jaw2_link.stl
ar_description/urdf/: ar.ros2_control.xacro  ar.urdf  ar.urdf.xacro  ar3.urdf  ar3.urdf.xacro  ar3_gazebo.urdf.xacro  ar3_macro.xacro  ar_gazebo.urdf.xacro  ar_gripper.ros2_control.xacro  ar_gripper_macro.xacro  ar_macro.xacro
ar_gazebo/: CMakeLists.txt  README.md  package.xml
ar_gazebo/launch/: ar3_gazebo_bringup.launch  ar_gazebo.launch.py
ar_gazebo/worlds/: empty.world
ar_hand_eye/: CMakeLists.txt  README.md  hand_eye_calibration.repos  package.xml
ar_hand_eye/config/: aruco_parameters.yaml  moveit_py_parameters.yaml
ar_hand_eye/launch/: calibrate.launch.py  validate.launch.py
ar_hand_eye/scripts/: calibration_aruco_publisher.py  follow_aruco_marker.py
ar_hand_eye_calibration/: CMakeLists.txt  Dockerfile  hand_eye_calibration.repos  package.xml
ar_hand_eye_calibration/launch/: calibrate.launch.py  follow_aruco_marker.launch.py  hand_eye_calibration.launch.py  validate.launch.py  validate_hand_eye_calibration.launch.py
ar_hand_eye_calibration/scripts/: calibration_aruco_publisher.py  follow_aruco_marker.py
ar_hardware_driver/: CMakeLists.txt  README.md  package.xml
ar_hardware_driver/include/ar_hardware_driver/: TeensyDriver.h
ar_hardware_driver/src/: TeensyDriver.cpp
ar_hardware_drivers/: CMakeLists.txt
ar_hardware_drivers/src/: TeensyDriver.cpp
ar_hardware_interface/: CMakeLists.txt  README.md  hardware_interface_plugin.xml  package.xml
ar_hardware_interface/config/: controllers.yaml  driver.yaml  hardware_driver.yaml  hardware_interface.yaml  joint_offsets.yaml
ar_hardware_interface/include/ar3_hardware_interface/: ar3_hardware_interface.h
ar_hardware_interface/include/ar_hardware_interface/: ar_gripper_hardware_interface.hpp  ar_hardware_interface.h  ar_hardware_interface.hpp  ar_servo_gripper_hw_interface.hpp  arduino_nano_driver.hpp  servo_gripper_hardware_interface.hpp  teensy_driver.hpp
ar_hardware_interface/launch/: ar3_hardware_bringup.launch  ar4_hardware_bringup.py  ar_hardware.launch.py  hand_eye_calibration.launch.py
ar_hardware_interface/scripts/: calibration_aruco_publisher.py  reset_estop.sh
ar_hardware_interface/src/: ar_hardware_interface.cpp  ar_hardware_interface_node.cpp  ar_ros2_control_node.cpp  ar_servo_gripper_hw_interface.cpp  arduino_nano_driver.cpp  run_arduino_nano.cpp  servo_gripper_hardware_interface.cpp  teensy_driver.cpp
ar_hardware_interface/urdf/: ar.ros2_control.xacro  ar.urdf.xacro  ar3.urdf.xacro
ar_microcontrollers/: README.md
ar_microcontrollers/AR4/: AR4.ino
ar_microcontrollers/AR4_MK2/: AR4_MK2.ino
ar_microcontrollers/AR4_MK3/: AR4_MK3.ino
ar_microcontrollers/AR4_nano/: AR4_nano.ino
ar_microcontrollers/AR4_nano_sketch/: AR4_nano_sketch.ino
ar_microcontrollers/AR4_teensy/: AR4_teensy.ino
ar_moveit_config/: CMakeLists.txt  README.md  package.xml
ar_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
docker/: Dockerfile  entrypoint.sh
docs/: gripper_overcurrent_protection.md
(+32 files in other folders)
