<package format="3">
  <name>annin_ar4_description</name>
  <version>3.0.0</version>
  <description>
    URDF Description package for Annin Robotics robotic arms
  </description>
  <license>MIT</license>

  <author>Dexter Ong</author>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
