<?xml version="1.0"?>
<package format="3">
  <name>annin_ar4_gazebo</name>
  <version>3.0.0</version>
  <description>Gazebo simulation the AR4 robot</description>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>annin_ar4_description</exec_depend>
  <exec_depend>annin_ar4_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
