<package format="3">
  <name>annin_ar4_moveit_config</name>
  <version>3.0.0</version>
  <description>
    Configuration and launch files for using the AR4 robot with MoveIt 2
  </description>
  <license>MIT</license>

  <author>Dexter Ong</author>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>annin_ar4_description</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
