<package format="3">
  <name>ar_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Annin Robotics robotic arms
  </description>
  <author>Dexter Ong</author>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@users.noreply.github.com">Yifei Cheng</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
