<?xml version="1.0"?>
<package format="3">
  <name>ar_hand_eye</name>
  <version>0.1.0</version>
  <description>
    Example hand eye calibration between an Intel Realsense camera and the AR4.
  </description>
  <license>MIT</license>

  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ros2_aruco_interfaces</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ar_hardware_interface</exec_depend>
  <exec_depend>easy_handeye2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>ros2_aruco</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
