<package format="3">
  <name>ar_hardware_driver</name>
  <version>0.0.0</version>
  <description>The ar_hardware_driver package</description>

  <author email="dexterong94@gmail.com">Dexter Ong</author>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@users.noreply.github.com">Yifei Cheng</maintainer>

  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Boost</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
