<package format="3">
  <name>ar_hardware_driver</name>
  <version>0.0.0</version>
  <description>The ar_hardware_driver package</description>
  <license>MIT</license>

  <author>Dexter Ong</author>
  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>boost</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
